# digit-identifier

./: .gitignore  CMakeLists.txt
src/: main.cpp  matrix.h  nn16x16.h  util.h
